--- a/DiscomfortApp/Base.lproj/LaunchScreen.storyboard
+++ b/DiscomfortApp/Base.lproj/LaunchScreen.storyboard
@@ -16,22 +16,26 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Plain" translatesAutoresizingMaskIntoConstraints="NO" id="wkg-71-OW9">
-                                <rect key="frame" x="58" y="310" width="298" height="276"/>
+                                <rect key="frame" x="39" y="291" width="336" height="315"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="336" id="ICA-2p-jPr"/>
+                                    <constraint firstAttribute="height" constant="315" id="PpT-zb-k2T"/>
+                                </constraints>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="0.96862745100000003" green="0.77647058820000003" blue="0.64705882349999999" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                         <constraints>
-                            <constraint firstItem="wkg-71-OW9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="266" id="0qk-ho-BRi"/>
-                            <constraint firstItem="wkg-71-OW9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="58" id="8ck-hI-J6s"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wkg-71-OW9" secondAttribute="trailing" constant="58" id="iTw-GO-Ifw"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="wkg-71-OW9" secondAttribute="bottom" constant="276" id="inH-OK-raE"/>
+                            <constraint firstItem="wkg-71-OW9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="39" id="9Ue-MF-bmd"/>
+                            <constraint firstItem="wkg-71-OW9" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="247" id="scX-vt-Z42"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="wkg-71-OW9" secondAttribute="bottom" constant="256" id="xIt-Mj-JjX"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="wkg-71-OW9" secondAttribute="trailing" constant="39" id="xSB-tC-EiM"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-230" y="4"/>
+            <point key="canvasLocation" x="-230.43478260869566" y="3.3482142857142856"/>
         </scene>
     </scenes>
     <resources>
