--- a/DiscomfortApp/Base.lproj/Main.storyboard
+++ b/DiscomfortApp/Base.lproj/Main.storyboard
@@ -137,7 +137,7 @@
                                     <constraint firstAttribute="height" constant="40" id="BrJ-Qn-5eU"/>
                                     <constraint firstAttribute="width" constant="109" id="IeZ-rV-Mr8"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="29"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="29"/>
                                 <state key="normal" title="計算"/>
                                 <connections>
                                     <action selector="CalcButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="wsE-Od-NZE"/>
@@ -595,10 +595,10 @@
             </objects>
             <point key="canvasLocation" x="286.95652173913044" y="1144.4196428571429"/>
         </scene>
-        <!--Tab Bar Controller-->
+        <!--Tabbar View Controller-->
         <scene sceneID="wED-ya-RXd">
             <objects>
-                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="vUm-Ea-9dy" sceneMemberID="viewController">
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="vUm-Ea-9dy" customClass="TabbarViewController" customModule="DiscomfortApp" customModuleProvider="target" sceneMemberID="viewController">
                     <toolbarItems/>
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="GOB-8L-pmr">
                         <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
